[BACKLOG-27160] - 8.3 - Update Copyright Information for Applications & Script files Year from 2018 to 2019